# c-lexical-analyzer

./: .gitignore  CMakeLists.txt  README.md  TOKEN_SPECIFICATION.md  main.cpp
examples/: test_case_2_compound_operators.c  test_case_4_logical_operators.c  test_case_5_illegal_characters.c  test_case_6_long_identifier.c  test_case_7_boundary_identifier.c  test_case_8_complex_nested.c
src/: lexer.cpp  lexer.h  symbol_table.cpp  symbol_table.h  token_types.cpp  token_types.h
